role based admin

--- a/ELibraryAdminManagement/appsettings.json
+++ b/ELibraryAdminManagement/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=ELibraryAdminDB;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=laptop-atnjbgii\\sqlexpress02;Initial Catalog=ELibraryAdminDB;Integrated Security=True;Trust Server Certificate=True"
   },
   "AllowedHosts": "*"
 }
